kubernetes/apps/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 6767
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          hostPath:
            path: /mnt/8000SAM1/8000/docker/downloaders/bazarr/config
            type: Directory
        - name: data
          hostPath:
            path: /mnt/8000SAM1/8000
            type: Directory
