kubernetes/apps/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: bazarr
spec:
  type: ClusterIP
  selector:
    app: bazarr
  ports:
    - name: http
      port: 6767
      targetPort: 6767
      protocol: TCP
