kubernetes/apps/bazarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: bazarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
      sectionName: websecure
  hostnames:
    - bazarr.sample.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bazarr
          port: 6767
